workloads/ingress/argocd/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
    - host: argocd.growbin.app
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
